<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/appointment"
        android:icon="@drawable/ic_appointment"
        android:id="@+id/Appointment"/>
    <item android:title="@string/add_appointment_note"
        android:icon="@drawable/ic_appointment"
        android:id="@+id/AppointmentReport"/>
    <item android:title="@string/video_call"
        android:icon="@drawable/ic_baseline_voice_chat_24"
         app:showAsAction="ifRoom"
        android:id="@+id/videoCall"
        />
    <item android:title="@string/voice_call"
        android:icon="@drawable/ic_baseline_call_24"
        app:showAsAction="ifRoom"
        android:id="@+id/voiceCall"/>

</menu>