<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:weightSum="5"
              android:background="#ffffffff">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:background="#fffafafa"
            >

        <TextView
            android:id="@+id/remoteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="14dp"
            android:text="@string/sample_user"
            android:textColor="@color/secondaryTextColor"
            android:textSize="28sp" />

        <TextView
                android:id="@+id/callState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/incoming_call"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp"
                android:textAllCaps="true"
                />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:contentDescription="@string/call_background"
        android:padding="0dip">
    </ImageView>

    <RelativeLayout
        android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center">

            <Button
                android:text="@string/answer"
                    android:id="@+id/answerButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    />
            <Button
                   android:text="@string/decline"
                    android:id="@+id/declineButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/answerButton"/>

    </RelativeLayout>

</LinearLayout>