<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="8dp"
    android:elevation="8dp"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView6"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="16dp"
            android:text="@string/doctor_s_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView7"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/prompt_email"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/TV_noteDoctorsName" />

        <TextView
            android:id="@+id/textView9"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/phone_number"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/TV_noteDoctorsEmail" />

        <TextView
            android:id="@+id/textView11"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dob"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_noteDoctorsTitle" />

        <View
            android:id="@+id/view6"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@color/primaryDarkColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TV_noteDoctorsPhoneNumber" />

        <TextView
            android:id="@+id/textView13"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/clinic_hospital_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <TextView
            android:id="@+id/TV_noteClinic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView15"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/description_of_the_medical_diagnosis"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/TV_noteClinic" />

        <TextView
            android:id="@+id/TV_noteDiagnosis"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/textView15"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/textView15" />

        <TextView
            android:id="@+id/textView17"
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/medical_advice_prescription"
            app:layout_constraintStart_toStartOf="@+id/textView15"
            app:layout_constraintTop_toBottomOf="@+id/TV_noteDiagnosis" />

        <TextView
            android:id="@+id/TV_notePrescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/TV_noteDoctorsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/TV_noteDoctorsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/TV_noteDoctorsEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/TV_noteDoctorsPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/TV_noteDob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6" />
        <TextView
            android:id="@+id/TV_itemNoteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
